--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 </div>
                 <div class="line"></div>
                 <ul class="row menu">
-                    <li class="to_right"><img src="/image/menu.svg" alt="menu"></li>
-                    <li class="center"><img src="/image/menu.svg" alt="menu"></li>
-                    <li class="to_left"><img src="/image/menu.svg" alt="menu"></li>
+                    <li class="to_right"><img src="image/menu.svg" alt="menu"></li>
+                    <li class="center"><img src="image/menu.svg" alt="menu"></li>
+                    <li class="to_left"><img src="image/menu.svg" alt="menu"></li>
                 </ul>
             </div>
             <ul class="row phone">
